# TermZilla

./: LICENSE  README.md  build-deb.sh  build-rpm.sh  bump.sh  install.sh  pyproject.toml  run.sh
src/termzilla/: __init__.py
src/termzilla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/termzilla/components/: __init__.py  file_table.py
src/termzilla/screens/: connect_dialog.py
src/termzilla/services/: __init__.py  file_operations.py  transfer_engine.py
